--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
               colors: {
                 clifford: '#da373d',
                 penguin:'#FFFBF0',
+                jack_price:'#FABE4C',
               }
             }
           }
@@ -24,7 +25,7 @@
     <header class="bg-penguin pb-12 pt-14">
       <section class="container mx-auto sm:flex items-center justify-around">
         <div class="space-y-4">
-          <h1 class="text-3xl sm:text-5xl uppercase font-bold">
+          <h1 class="text-2xl sm:text-5xl uppercase font-bold">
             <span class="text-amber-400">Be the Penguins</span>
             <br>
             <span class="text-slate-700">of Winter</span>
@@ -42,18 +43,161 @@
           </button>
         </div>
         <div class="pt-8 sm:pt-0">
-          <img class="w-72 sm:w-full" src="images/model.png" alt="" srcset="">
+          <img class="w-1/2 sm:w-full" src="images/model.png" alt="" srcset="">
         </div>
       </section>
     </header>
 
     <!-- main section -->
 
-    <main>
+    <main class="container w-5/6 m-auto">
       <!-- Woman jacket -->
-      <section>
-        
+      <section class="container mx-auto">
+        <h1 class="text-5xl font-bold mt-7 mb-6">Woman jacket</h1>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl">
+          <div class="p-4 shadow-lg">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-1.png" alt="">
+            </div>
+          <h1 class="text-3xl">Yellow Coat Jacket </h1>
+          <p>Lorem Ipsum is simply dummy text of the 
+            printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h1 class="text-5xl text-jack_price font-bold">$234</h1>
+              <button class="uppercase rounded-lg bg-lime-600 py-5 px-7 font-semibold text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-4 shadow-lg">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-2.png" alt="">
+            </div>
+          <h1 class="text-3xl">Yellow Coat Jacket </h1>
+          <p>Lorem Ipsum is simply dummy text of the 
+            printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h1 class="text-5xl text-jack_price font-bold">$234</h1>
+              <button class="uppercase rounded-lg bg-lime-600 py-5 px-7 font-semibold text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-4 shadow-lg">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-3.png" alt="">
+            </div>
+          <h1 class="text-3xl">Yellow Coat Jacket </h1>
+          <p>Lorem Ipsum is simply dummy text of the 
+            printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h1 class="text-5xl text-jack_price font-bold">$234</h1>
+              <button class="uppercase rounded-lg bg-lime-600 py-5 px-7 font-semibold text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
+      <!-- Man jacket -->
+      <section class="my-20">
+        <h1 class="text-5xl font-bold mt-7 mb-6">Man jacket</h1>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl">
+          <div class="p-4 shadow-lg">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-4.png" alt="">
+            </div>
+          <h1 class="text-3xl">Yellow Coat Jacket </h1>
+          <p>Lorem Ipsum is simply dummy text of the 
+            printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h1 class="text-5xl text-jack_price font-bold">$234</h1>
+              <button class="uppercase rounded-lg bg-lime-600 py-5 px-7 font-semibold text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-4 shadow-lg">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-5.png" alt="">
+            </div>
+          <h1 class="text-3xl">Yellow Coat Jacket </h1>
+          <p>Lorem Ipsum is simply dummy text of the 
+            printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h1 class="text-5xl text-jack_price font-bold">$234</h1>
+              <button class="uppercase rounded-lg bg-lime-600 py-5 px-7 font-semibold text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-4 shadow-lg">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-6.png" alt="">
+            </div>
+          <h1 class="text-3xl">Yellow Coat Jacket </h1>
+          <p>Lorem Ipsum is simply dummy text of the 
+            printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h1 class="text-5xl text-jack_price font-bold">$234</h1>
+              <button class="uppercase rounded-lg bg-lime-600 py-5 px-7 font-semibold text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Last section -->
+        <section class="">
+          <div class="grid grid-cols-2 gap-5">
+            <div class="flex rounded-xl bg-slate-100 p-4">
+              <img class="w-20 h-20 mr-4" src="images/question.png" alt="">
+              <div>
+                <h1 class="text-xl">Find the Perfect Fit</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, error?</p>
+              </div>
+            </div>
+            <div class="row-span-3">
+              <img src="images/shopping.png" alt="">
+            </div>
+            <div class="flex rounded-xl bg-slate-100 p-4">
+              <img class="w-20 h-20 mr-4" src="images/house.png" alt="">
+              <div>
+                <h1 class="text-xl">Find the Perfect Fit</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, error?</p>
+              </div>
+            </div>
+            <div class="flex rounded-xl bg-slate-100 p-4">
+              <img class="w-20 h-20 mr-4" src="images/box.png" alt="">
+              <div>
+                <h1 class="text-xl">Find the Perfect Fit</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, error?</p>
+              </div>
+            </div>
+
+          </div>
+        </section>
     </main>
+    <footer class="">
+      <p class="text-center h-12 bg-slate-300 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cupiditate!</p>
+    </footer>
 </body>
 </html>
